--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">MVVM demo</string>
+    <string name="app_name">MVVM Demo</string>
+    <string name="help_general">Something generally helpful</string>
+    <string name="help_main">Something helpful for the main screen</string>
+    <string name="help_animation">Something helpful for the animation screen</string>
 </resources>
